# simmons

./: .editorconfig  .env.sample  .env_example  .gitignore  LICENSE  README.md  crew.py  main.py  pyproject.toml
config/: agents.yaml  tasks.yaml
simmons/: crew.py  main.py
simmons/config/: agents.yaml  tasks.yaml
